--- a/artist.html
+++ b/artist.html
@@ -211,6 +211,9 @@
                   </div>
                   </div> -->
                   </div>
+                  <div class="col-12">
+                    <button id="btnOfExpand">VISUALIZZA ALTRO</button>
+                  </div>
                 </div> <!-- DIV FINALE DELLA MAXI COL-6 -->
 
                 <div class="col-3">
@@ -218,7 +221,7 @@
                     <h3>Brani che ti piacciono</h3>
                   </div>
                   <div class="d-flex align-items-center" id="imgSm">
-                    <img src="./assets/imgs/main/image-19.jpg" alt="img a caso" class="w-25 me-2">
+                    <!-- <img src="./assets/imgs/main/image-19.jpg" alt="img a caso" class="w-25 me-2"> -->
                     <div>
                       <h6> Hai messo Mi piace a ....</h6>
                       <p>Di ....</p>
@@ -320,7 +323,7 @@
   </div>
 
   <!-- FOOTER -->
-  <footer class=" d-flex align-items-center p-4 border-top border-dark">
+  <!-- <footer class=" d-flex align-items-center p-4 border-top border-dark">
     <div class="container-fluid m-0">
       <div class="row">
         <div class="col-3 d-flex align-items-center gap-2">
@@ -358,7 +361,7 @@
         </div>
       </div>
 
-  </footer>
+  </footer> -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
