--- a/artist.html
+++ b/artist.html
@@ -175,7 +175,7 @@
 
 
 
-          <section class="container-fluid p-0 m-0 master-section">
+          <section class="container-fluid p-0 m-0 mb-5 master-section">
             <div class="row px-4 py-2 d-flex align-items-center justify-content-start">
               <div class="col-3 d-flex align-items-center gap-4 my-3">
                 <button class="btn btn-success rounded-circle border"><i class="bi bi-play-fill fs-2 text-black"></i>
@@ -323,7 +323,7 @@
   </div>
 
   <!-- FOOTER -->
-  <!-- <footer class=" d-flex align-items-center p-4 border-top border-dark">
+   <footer class=" d-flex align-items-center p-4 border-top border-dark">
     <div class="container-fluid m-0">
       <div class="row">
         <div class="col-3 d-flex align-items-center gap-2">
@@ -361,7 +361,7 @@
         </div>
       </div>
 
-  </footer> -->
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
