--- a/album.html
+++ b/album.html
@@ -152,8 +152,8 @@
               </div>
             </div>
             <div class="mt-3 d-flex mb-3">
-              <div class="album-cover">
-                <img src="" class="img-fluid" id="album-img">
+              <div class="album-cover" id="album-img">
+                
               </div>
               <div class="ms-3 d-flex flex-column justify-content-end">
                 <div>
@@ -162,8 +162,8 @@
                 <div>
                   <h1 class="p-0 album-title fw-bold" id="album-title"></h1>
                 </div>
-                <div class="d-flex align-items-center">
-                  <div class="imageUser me-2">
+                <div id="containerInfoAlbum"class="d-flex align-items-center">
+                  <!-- <div class="imageUser me-2">
                     <img src="assets/imgs/main/image-11.jpg" class="img-fluid rounded-pill">
                   </div>
                   <div>
@@ -179,7 +179,7 @@
                       <span id="album-duration">
                       </span>
                     </div>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
@@ -218,27 +218,31 @@
   </main>
 
   <!-- FOOTER -->
-  <footer class=" d-flex align-items-center p-4 border-top border-dark">
+
+  
+  <footer id="footer" class=" d-flex align-items-center border-top border-dark vw-100">
     <div class="container-fluid m-0">
 
-        <div class="row">
+        <div class="row p-0 m-0">
 
             <!-- PLAYER SX -->
-            <div class="col-3 d-flex align-items-center gap-2">
-                <div class="imgPlayer me-3">
-                    <img src="assets/imgs/search/image-13.jpeg" class="img-fluid" />
+            <div class="col-4 d-flex">
+              <div class="row d-flex justify-content-between align-itmes-center">
+                <div id="imgPlayer"class="col-3 imgPlayer me-3">
+
                 </div>
-                <div class="d-flex flex-column justify-content-center me-4">
-                    <span class="fw-bold">Fat Funny Friend</span>
-                    <span class="fw-lighter">Matilde Zahn</span>
+                <div class=" col-6 d-flex flex-column justify-content-center me-4">
+                    <span id="nameTrack" class="fw-bold"></span>
+                    <span id="nameArt" class="fw-lighter"></span>
                 </div>
-                <div class="fs-5">
+                <div class=" col-3 fs-5">
                     <i role="button" class="bi bi-heart"></i>
                 </div>
+              </div>
             </div>
 
             <!-- PLAYER CENTRALE -->
-            <div class="col-6 d-flex flex-column lh-1 pt-3">
+            <div class="col-5 d-flex flex-column lh-1 pt-3">
 
                 <div class="buttons d-flex justify-content-center align-items-center">
                     <div class="prev-track pe-4" onclick="prevTrack()"><i role="button"
@@ -276,6 +280,9 @@
         </div>
     </div>
 </footer>
+
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous">
