--- a/artist.html
+++ b/artist.html
@@ -211,7 +211,7 @@
             <!-- SEZIONE CENTRALE -->
 
             <!-- SECONDA COLONNA -->
-            <main class="col-9 gradient-bg mb-4 vh-100 overflow-auto bg-dark p-0" id="test_02">
+            <main class="col-9 gradient-bg mb-4 vh-100 overflow-auto bg-dark" id="test_02">
 
                 <!-- INTESTAZIONE PARTE CENTRALE-->
                 <div id="imageBackground"
@@ -253,20 +253,20 @@
                     </div>
                     <!-- SEZIONE HERO -->
                     <div class="row my-3 mx-0 d-flex">
-                        <div class="d-flex p-0 flex-column justify-content-end">
+                        <div class="d-flex p-0 flex-column">
                             <div class="d-flex align-items-center">
-                                <img width="30" height="30" src="https://img.icons8.com/color/48/verified-badge.png"
-                                    alt="verified-badge" class="me-2" /><span> Artista Verificato</span>
+                                <img width="25" height="25" src="https://img.icons8.com/color/48/verified-badge.png"
+                                    alt="verified-badge" class="me-2" /><spa class="fs-6"> Artista Verificato</span>
                             </div>
                             <div>
-                                <h1 class="p-0 fw-bold display-1 mb-3" id="artistTitle"> I Pinguini Tattici Nucleari
+                                <h1 class="p-0 fw-bold display-1 mb-3" id="artistTitle">
                                 </h1>
                             </div>
                             <div class="d-flex align-items-center">
                                 <div>
                                     <div class="d-flex align-items-center justofy-content-center">
                                         <span class="fw-bold" id="artistFan">
-                                            1.000.000 ascoltatori mensili
+
                                         </span>
                                     </div>
                                 </div>
@@ -277,7 +277,7 @@
 
 
 
-                <section class="container-fluid p-0 m-0 master-section">
+                <section class="container-fluid p-0 m-0 master-section mb-5">
                     <div class="row px-4 py-2 d-flex align-items-center justify-content-start m-0">
                         <div class="col-3 d-flex align-items-center gap-4 my-3">
                             <div role="button">
@@ -295,12 +295,12 @@
                         <!-- SEZIONE CHE ANDRA' A POPOLARSI DA JS -->
                         <div class="row">
                             <div class="col-7">
-                                <div class="mb-5">
+                                <div class="mb-4">
                                     <h3 class="fs-4">Popolari</h3>
                                 </div>
                                 <div id="songsList" class="pe-4">
-                                    <!-- <div class="row px-4 py-2">
-                  <div class="d-flex  align-items-center fw-lighter">
+                                    <!-- <div class="row px-4 py-2 d-flex align-items-center fw-lighter">
+
                     <div class="col-6 mb-2 d-flex align-items-center">
                       <div class="me-3">
                         <span>1</span>
@@ -322,15 +322,15 @@
                             </div> <!-- DIV FINALE DELLA MAXI COL-6 -->
 
                             <div class="col-5">
-                                <div class="mb-5">
+                                <div class="mb-4">
                                     <h3 class="fs-4">Brani che ti piacciono</h3>
                                 </div>
-                                <div class="d-flex align-items-center" id="imgSm">
-                                    <img src="./assets/imgs/main/image-19.jpg" alt="img a caso" class="w-25 me-2">
+                                <div>
                                     <div>
-                                        <h6> Hai messo Mi piace a ....</h6>
-                                        <p>Di ....</p>
+                                        <div class="d-flex align-items-center" id="imgSm">
                                     </div>
+                                </div>
+
                                 </div>
                             </div> <!-- DIV FINALE DELLA MAXI COL-3-->
                         </div> <!--DIV FINALE DELLA ROW CHE RACCHIUDE LE MAXI COL-6 COL-3-->
@@ -470,7 +470,7 @@
                 </div>
             </div>
 
-    </footer>
+    </footer> 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
