--- a/album.html
+++ b/album.html
@@ -230,11 +230,11 @@
         <!-- PLAYER SX -->
         <div class="col-3 d-flex align-items-center gap-2">
           <div id="imgPlayer" class="imgPlayer me-3">
-            <img src="assets/imgs/search/image-13.jpeg" class="img-fluid" />
+            <img src="" class="img-fluid" />
           </div>
           <div class="d-flex flex-column justify-content-center me-4">
-            <span class="fw-bold">Fat Funny Friend</span>
-            <span class="fw-lighter">Matilde Zahn</span>
+            <span id="nameTrack" class="fw-bold"></span>
+            <span id="nameArt" class="fw-lighter"></span>
           </div>
           <div class="fs-5">
             <i role="button" class="bi bi-heart"></i>
