--- a/album.html
+++ b/album.html
@@ -201,7 +201,7 @@
           </div>
         </div>
 
-        <div class="col-10 col-lg-10 p-0 pe-2 vh-100 overflow-auto">
+        <div class="col-9 col-lg-9 p-0 pe-2 vh-100 overflow-auto">
           <div class="px-4 py-2 border-bottom" id="album-info">
             <div class="d-flex justify-content-between align-content-center my-3">
 
@@ -260,7 +260,7 @@
                       <span id="tracks-number"> </span>
                       <span id="album-duration"> </span>
                     </div>
-                  </div> -->
+                  </div> 
                 </div>
               </div>
             </div>
@@ -314,7 +314,10 @@
             <span id="nameArt" class="fw-lighter"></span>
           </div>
           <div class="fs-5">
-            <i role="button" class="bi bi-heart"></i>
+            <svg xmlns="http://www.w3.org/2000/svg" width="19" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+              <path
+                  d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
+          </svg>
           </div>
         </div>
 
@@ -325,7 +328,13 @@
               <i role="button" class="bi bi-skip-backward-fill"></i>
             </div>
             <div class="playpause-track pe-4" onclick="playpauseTrack()">
-              <i role="button" class="bi bi-play-circle-fill fs-2"></i>
+              <svg data-encore-id="icon" width="20" role="img" aria-hidden="true" viewBox="0 0 16 16" fill="currentColor"
+              class="Svg-sc-ytk21e-0 dYnaPI">
+              <path
+                  d="M12.7 1a.7.7 0 0 0-.7.7v5.15L2.05 1.107A.7.7 0 0 0 1 1.712v12.575a.7.7 0 0 0 1.05.607L12 9.149V14.3a.7.7 0 0 0 .7.7h1.6a.7.7 0 0 0 .7-.7V1.7a.7.7 0 0 0-.7-.7h-1.6z">
+              </path>
+          </svg>
+          
             </div>
             <div class="next-track" onclick="nextTrack()">
               <i role="button" class="bi bi-skip-forward-fill"></i>
