--- a/album.html
+++ b/album.html
@@ -306,12 +306,16 @@
       <div class="row">
         <!-- PLAYER SX -->
         <div class="col-3 d-flex align-items-center gap-2">
-          <div id="imgPlayer" class="imgPlayer me-3">
-            <img src="" class="img-fluid" />
+          <div id="imgPlayer" class="imgPlayer me-3 p-1">
+            <img src="">
           </div>
-          <div class="d-flex flex-column justify-content-center me-4">
-            <span id="nameTrack" class="fw-bold"></span>
-            <span id="nameArt" class="fw-lighter"></span>
+          <div class="d-flex flex-column justify-content-center me-4 containerMarquee">
+            <div id="marquee">
+              <span id="nameTrack" class="fw-bold"></span>
+            </div>
+            <div>
+              <span id="nameArt" class="fw-lighter"></span>
+            </div>
           </div>
           <div class="fs-5">
             <svg xmlns="http://www.w3.org/2000/svg" width="19" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
@@ -322,7 +326,7 @@
         </div>
 
         <!-- PLAYER CENTRALE -->
-        <div class="col-6 d-flex flex-column lh-1 pt-3">
+        <div class="col-6 d-flex flex-column justify-content-center">
           <div class="buttons d-flex justify-content-center align-items-center">
             <div class="prev-track pe-4" onclick="prevTrack()">
               <i role="button" class="bi bi-skip-backward-fill"></i>
@@ -341,9 +345,9 @@
             </div>
           </div>
 
-          <div class="slider_container d-flex">
+          <div class="slider_container d-flex align-items-center">
             <div class="current-time pe-3">00:00</div>
-            <input type="range" min="1" max="100" value="0" class="seek_slider mt-2" onchange="seekTo()" />
+            <input type="range" min="1" max="100" value="0" class="seek_slider" onchange="seekTo()" />
             <div class="total-duration ps-3">00:00</div>
           </div>
         </div>
@@ -357,7 +361,7 @@
 
             <div class="slider_container">
               <i class="fa fa-volume-down pe-3"></i>
-              <input type="range" min="1" max="100" value="99" class="volume_slider" onchange="setVolume()" />
+              <input type="range" min="0" max="100" value="99" class="volume_slider" onchange="setVolume()" />
               <i class="fa fa-volume-up ps-3"></i>
             </div>
 
