--- a/artist.html
+++ b/artist.html
@@ -222,7 +222,7 @@
                 <main class="col-10 gradient-bg mb-4 ms-1 vh-100 overflow-auto bg-dark" id="test_02">
 
                     <!-- INTESTAZIONE PARTE CENTRALE-->
-                    <div id="imageBackground" class="container-fluid m-0 pt-4 position-r d-flex flex-column justify-content-between">
+                    <div id="imageBackground" class="container-fluid m-0 pt-4 position-r">
                         <div class="row d-flex justify-content-between">
                             <div class="col-6">
                                 <button class="rounded-circle btn btn-dark opacity-75 fs-6 text-white me-3"
@@ -260,7 +260,7 @@
                             </div>
                         </div>
                         <!-- SEZIONE HERO -->
-                        <div class="my-3 d-flex">
+                        <div class="my-3 d-flex h-75">
                             <div class="d-flex flex-column justify-content-end flex-grow-1">
                                 <div class="d-flex align-items-center">
                                     <img width="30" height="30" src="https://img.icons8.com/color/48/verified-badge.png"
@@ -298,8 +298,8 @@
 
                             <!-- SEZIONE CHE ANDRA' A POPOLARSI DA JS -->
                             <div class="row">
-                                <div class="col-6">
-                                    <div class="mb-4">
+                                <div class="col-6 me-3">
+                                    <div class="mb-5">
                                         <h3>Popolari</h3>
                                     </div>
                                     <div id="songsList">
@@ -325,21 +325,15 @@
                                     </div>
                                 </div> <!-- DIV FINALE DELLA MAXI COL-6 -->
 
-                                <div class="col-6">
-                                    <div class="mb-4">
+                                <div class="col-3">
+                                    <div class="mb-5">
                                         <h3>Brani che ti piacciono</h3>
                                     </div>
                                     <div class="d-flex align-items-center" id="imgSm">
-                                        <div id="liked-img" class="me-3">
-                                        <img src="./assets/imgs/main/image-19.jpg" alt="img a caso" class="img-fluid ">
-                                    </div>
+                                        <img src="./assets/imgs/main/image-19.jpg" alt="img a caso" class="w-25 me-2">
                                         <div>
-                                            <div>
-                                            <h6 class="m-0"> Hai messo Mi piace a ....</h6>
-                                        </div>
-                                        <div>
-                                            <p class="m-0">Di ....</p>
-                                        </div>
+                                            <h6> Hai messo Mi piace a ....</h6>
+                                            <p>Di ....</p>
                                         </div>
                                     </div>
                                 </div> <!-- DIV FINALE DELLA MAXI COL-3-->
