--- a/search.html
+++ b/search.html
@@ -26,12 +26,12 @@
 </head>
 
 
-<body data-bs-theme="dark" class="overflow-hidden d-flex flex-column">
+<body data-bs-theme="dark" class="overflow-x-hidden">
 
     <main class="flex-1">
         <div class="container-fluid p-0 m-0 bg-black">
             <div class="row ps-3 p-0">
-                <div class="col-lg-3 fs-3 vh-100 d-flex flex-column d-none d-sm-block col-sm-3"> <!-- COLONNA DI SINISTRA -->
+                <div class="col-lg-3 col-md-3 fs-3 vh-100 d-flex flex-column d-none d-md-block col-sm-3"> <!-- COLONNA DI SINISTRA -->
                     <div>
                         <section class="mb-3">
                             <div role="button">
@@ -65,7 +65,7 @@
                             </div>
                         </section>
                     </div>
-                    <div class="mt-3 fs-6 vh-100 overflow-auto">
+                    <div class="mt-3 fs-6 overflow-x-hidden">
                         <div class="my-2">
                             <span> Custom Playlist Name</span>
                         </div>
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-9 col-sm-9 ps-0 pe-2 vh-100 overflow-auto">
+                <div class="col-lg-9 col-sm-12 col-md-9 ps-0 pe-0 vh-100 overflow-auto">
 
                     <!-- SOSTITUTO INTESTAZIONE X MOBILE -->
                     <div class="container d-block d-sm-none">
@@ -135,9 +135,10 @@
                             </div>
                             <div class="col-12 my-3">
 
-                                <form class="d-flex" role="search">
+                                <form class="d-flex" role="search" id="search-mobile">
+
                                     <input class="form-control me-2" type="search"
-                                        placeholder="&#xF52A; Cosa vuoi ascoltare?" aria-label="Search">
+                                        placeholder="Cosa vuoi ascoltare?" aria-label="Search">
                                 </form>
 
                             </div>
@@ -149,7 +150,7 @@
                     </div>
 
                     <!-- INTESTAZIONE TABLET-->
-                    <div class="px-4 py-2 mb-3 d-none d-sm-block">
+                    <div class="px-4 py-2 mb-3 d-none d-sm-block overflow-y-hidden">
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="fs-4 d-flex align-items-center">
                                 <div class="me-3">
@@ -183,7 +184,7 @@
                     </div>
 
                     <div id="containerSearch" class="container-fluid">
-                        <div id="cardList" class="row py-2 px-4 g-4">
+                        <div id="cardList" class="row py-2 g-4">
 
 
 
@@ -205,13 +206,13 @@
 
 
         <!-- FOOTER TABLET-->
-        <div class="container-fluid m-0 d-none d-md-block" id="colorSpecSpotify">
-            <div class="row">
+        <div class="container-fluid m-0 d-none d-sm-block" id="colorSpecSpotify">
+            <div class="row m-0">
                 <div class="col-3 d-flex align-items-center gap-2">
-                    <div class="imgPlayer me-3">
+                    <div class="imgPlayer">
                         <img src="assets/imgs/search/image-13.jpeg" class="img-fluid">
                     </div>
-                    <div class="d-flex flex-column justify-content-center me-4">
+                    <div class="d-flex flex-column justify-content-center">
                         <span class="fw-bold">Fat Funny Friend</span>
                         <span class="fw-lighter">Matilde Zahn</span>
                     </div>
@@ -250,14 +251,14 @@
 
         <!-- FOOTER MOBILE-->
 
-        <div class="container-fluid m-0 d-block p-0 wh-100 d-md-none g-0">
-            <div class="row m-0 g-0">
+        <div class="container-fluid m-0 d-block p-0 wh-100 d-sm-none g-0">
+            <div class="row m-0" id="pill-player">
 
-                <div class="foot-pill-player col-12 d-flex justify-content-center align-items-center py-1 wh-100 g-0">
-                    <p class="pe-3 mx-4">BRIGA - SEI DI MATTINA - BY HONIRO ...</p>
-                    <i class="bi bi-music-player fs-1 pe-3"></i>
-                    <i class="bi bi-heart fs-1 pe-3"></i>
-                    <i class="bi bi-play-fill fs-1"></i>
+                <div class="foot-pill-player col-11 d-flex justify-content-center py-1" id="pill-player">
+                    <p class="pe-1 ms-0 py-3 mx-4 mb-0 me-0 d-flex align-items-center">BRIGA - SEI DI MATTINA - BY HONIRO ...</p>
+                    <i class="bi bi-music-player fs-5 pe-2 d-flex align-items-center"></i>
+                    <i class="bi bi-heart fs-5 pe-2 d-flex align-items-center"></i>
+                    <i class="bi bi-play-fill fs-5 d-flex align-items-center"></i>
                 </div>
 
                 <div class="row m-0 foot-gradient py-1">
